--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,32 @@
 body{
     background-color: lightblue;
 }
+.card{
+    margin: 15px;
+}
 .title h1{
+    padding: 10px;
+    text-align: center;
+    letter-spacing: 2px;
+}
+
+
+.footer {
+    position: relative;
+    padding: 10px;
+    margin: 5px;
+    text-align: center;
+    letter-spacing: 1px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: lightseagreen;
+    color: white;
     text-align: center;
 }
+.footer a{
+    color: black;
+    letter-spacing: 2px;
+    font-weight: 500;
+}
+  
