--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ body{
 
 
 .footer {
-    position: absolute;
+    position: relative;
     padding: 10px;
     margin: 5px;
     text-align: center;
