--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ body{
 
 
 .footer {
-    position: relative;
+    position: fixed;
     padding: 10px;
     margin: 5px;
     text-align: center;
@@ -20,8 +20,8 @@ body{
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: lightseagreen;
-    color: white;
+    background-color:;
+    color: black;
     text-align: center;
 }
 .footer a{
